--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  background: #e3f2fd;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -13,4 +14,10 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.main-container {
+  width: 1200px;
+  margin: 0 auto;
+  padding: 16px;
 }
